@@ -1,3 +1,9 @@
+2003-05-31  Jochen Wiedmann  <joe@ispsoft.de> (2.1027)
+
+	* t/mysql.t: Fixed the checks for test results
+	  on MacOS, case insensitivity is required in
+	  some cases. Marc Liyanage, liyanage at access.ch
+
 2003-03-03  Jochen Wiedmann  <joe@ispsoft.de> (2.1026)
 
 	* Fixed the handling of case insensitive file
